Testing refactor (#4)
* Setup basic ability to run tests

* Extract a few commands to their own classes

* Extract a few more commands to their own classes

* Extract a few more commands to their own classes

* Extract last set of commands, MyPlugin now much simpler

* tmp - get some tests working, figure out MockBukkit

* Paper 1.20.4 → 1.21.4 upgrade / MockBukkit upgraded from 3.93.2 (old package) to 4.0.0 (new package)

* Several tests added/updated now that mocks work

* final testing - we arent testing much, but gives us a starting place